fixed editor resizable + tooltip overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -290,19 +290,19 @@ body {
   height: 400px;
   background-color: rgba(var(--color-bg-secondary-rgb), var(--panel-opacity)) !important;
   border-radius: 8px;
-  overflow: visible !important;
+  /* overflow: visible !important; */
   z-index: 100;
   box-shadow: 0 4px 15px var(--color-panel-shadow);
   /* backdrop-filter: blur(var(--color-panel-blur)); */
-  /* resize: both; */
   display: flex;
   flex-direction: column;
   min-width: 500px;
   min-height: 250px;
+  resize: both;
 }
 
 .editor-content {
-  overflow: visible !important;
+  overflow: auto;
   flex-grow: 1;
 }
 
